--- a/.github/workflows/generate_snake.yml
+++ b/.github/workflows/generate_snake.yml
@@ -3,7 +3,7 @@ name: generate-snake-game-from-github-contribution-grid
 on: 
   schedule: 
       # every 6 hours
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"
   
   workflow_dispatch:
 
