--- a/.github/workflows/generate_snake.yml
+++ b/.github/workflows/generate_snake.yml
@@ -8,8 +8,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build: 
+  generate: 
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
       - uses: actions/checkout@v3
