--- a/.github/workflows/generate_snake.yml
+++ b/.github/workflows/generate_snake.yml
@@ -13,26 +13,20 @@ jobs:
     timeout-minutes: 10
     
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with: 
-          github_user_name: larsingerlars
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          
-      - run: git status
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with: 
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          branch: master
-          force: true
-          
-      - uses: crazy-max/ghaction-github-pages@v3
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
